# permutation-iterator-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  add-git-hook.sh  release.toml  test.sh
.github/: dependabot.yml
benches/: medium.rs
examples/: deterministic.rs  random_pair.rs  simple.rs
src/: lib.rs
tests/: feistel_network.rs  permutor.rs  randomness.rs
