[package]
name = "permutation_iterator"
version = "0.1.0"
edition = "2018"
authors = ["Asim Ihsan <asim.ihsan@gmail.com>"]
license = "Apache-2.0"
license_file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/asimihsan/permutation-iterator-rs"
description = "A Rust library for iterating over random permutations without fully materializing them into memory."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "medium"

[dependencies]
blake2-rfc = "0.2.18"
rand = "0.7.2"
