[package]
name = "permutation_iterator"
version = "0.1.3-alpha.0"
edition = "2018"
authors = ["Asim Ihsan <asim.ihsan@gmail.com>"]

description = """
A Rust library for iterating over random permutations using O(1) (i.e. constant) space.
"""
keywords = ["permutation", "permute", "random"]
categories = ["algorithms", "no-std"]
documentation = "https://docs.rs/permutation-iterator-rs/"
repository = "https://github.com/asimihsan/permutation-iterator-rs"
homepage = "https://github.com/asimihsan/permutation-iterator-rs"
readme = "README.md"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "asimihsan/permutation-iterator-rs", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[[bench]]
name = "medium"

# To use these `cargo install cargo-template-ci` then run `cargo template-ci`. This will generate Travis config for you.
[package.metadata.template_ci]
dist = "bionic"
versions = ["stable", "beta", "nightly"]
clippy = { allow_failure = false }
rustfmt = { allow_failure = false }
bench = { run = true }

[dependencies.getrandom]
version = "0.2.2"
features = ["wasm-bindgen"]

[dependencies.anyhow]
version = "1.0.13"
default-features = false

[dependencies]
wyhash = "0.3.0"

[dev-dependencies]
rand = "0.7.3"